audience section, added bckgrnd txtre

--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,41 +1,34 @@
-%section
-  %h2 
-  %ul.nav.nav-tabs
-    %li
-      %a{:href=>"#voters", :data=>{:toggle=>"tab"}} Voters
-    %li
-      %a{:href=>"#orgs", :data=>{:toggle=>"tab"}} Organizations
-    %li
-      %a{:href=>"#politicians", :data=>{:toggle=>"tab"}} Politicians
-  .tab-content
-    #voters.tab-pane.active
-      .row-fluid
-        .span6
-          %h3 Discover politicians and organizations who support causes you care about and monitor your shared sentiment with them over time.
-        .span6
-          = image_tag "nytm_andrew_sopa.jpg", {:class=>"img"}
-    #orgs.tab-pane
-      .row-fluid
-        .span6
-          %h2 Solicit, monitor, and analyze politicians' and voters' policy sentiments and identify potential supporters, volunteers, or alliances.
-        .span6
-          = image_tag "candidate_frac.jpg", {:class=>"img"}
-    #politicians.tab-pane
-      .row-fluid
-        .span6
-          %h2 Document your policy stance in a sharable way so that campaigners and supporters can evangelize your platform.
-        .span6
-          = image_tag "right_to_literacy.jpg", {:class=>"img"}
-%section.row-fluid
-  .span4
-    = image_tag "policy.png"
-    %h3 Discover politicians' policy positions.
-  .span4
-    = image_tag "candidates.png"
-    %h3 Compare and contrast your position with politicians.
-  .span4
-    = image_tag "vote.png" 
-    %h3 Make informed voting decisions.
+%section#benefits
+  .row-fluid
+    .span4
+      = image_tag "policy.png"
+      %h3 Discover politicians' policy positions.
+    .span4
+      = image_tag "candidates.png"
+      %h3 Compare and contrast your position with politicians.
+    .span4
+      = image_tag "vote.png" 
+      %h3 Make informed voting decisions.
+%section#audience.span10
+  %ul
+    %li#voters.span9
+      .row
+        .desc.span4
+          %h2 For Voters
+          %p Discover politicians and organizations who support causes you care about and monitor your shared sentiment with them over time.
+        = image_tag "nytm_andrew_sopa.jpg", {:class=>"img img-polaroid span4"}
+    %li#orgs.span9
+      .row
+        = image_tag "candidate_frac.jpg", {:class=>"img img-polaroid span4"}
+        .desc.span4
+          %h2 For Organizations
+          %p Solicit, monitor, and analyze politicians' and voters' policy sentiments and identify potential supporters, volunteers, or alliances.
+    %li#politicians.span9
+      .row
+        .desc.span4
+          %h2 For Politicans
+          %p Document your policy stance in a sharable way so that campaigners and supporters can evangelize your platform.
+        = image_tag "right_to_literacy.jpg", {:class=>"img img-polaroid span4"}
 
 
 
