--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,6 +53,7 @@ $grayMediumLight: #eaeaea;
 
 body {
   font-family: 'Lato', Helvetica, sans-serif;
+  background-image: url("texture.jpg");
 }
 
 /* spacing */
@@ -107,15 +108,6 @@ body {
   padding-top: 40px; /*to account for fixed nav */
 }
 
-#carousel {
-  margin-right: -$large-space;
-  margin-left: -$large-space;
-  margin-top: -19px;
-  .item {
-    height: 500px;
-  }
-}
-
 .ashley-btn {
   border: none;
   background: $dark-yellow;
@@ -145,19 +137,46 @@ body {
   }
 }
 
-section {
-  vertical-align: middle;
-  margin: $large-space;
+#benefits {
+  overflow: auto;
+  margin-top: $large-space;
+  margin-bottom: $large-space;
   h3 {
     color: $dark-blue;
   }
-  div {
-    padding: 0 $large-space;
-    text-align: center;
+  .row-fluid {
+    background: white;
+    div {
+      padding: $large-space;
+      text-align: center;
+    }
+    div:nth-child(2){
+      border-right: $small-space dotted $dark-white;
+      border-left: $small-space dotted $dark-white;
+    }
   }
-  div:nth-child(2){
-    border-right: $small-space dotted $dark-white;
-    border-left: $small-space dotted $dark-white;
+}
+
+#audience {
+  overflow: auto;
+  margin-top: $large-space;
+  ul {
+    list-style: none;
+    li {
+      .row {
+        background-color: white;
+        padding: $medium-space;
+        margin: $medium-space auto;
+      }
+    }
+  }
+  h2 {
+    font-family: "bariol";
+    font-weight: 400;
+    color: $dark-blue;
+  }
+  #orgs {
+    text-align: right;
   }
 }
 
@@ -206,17 +225,11 @@ footer {
 }
 
 
-/* clear fix */
-.group:before,
-.group:after  {
+/*clearfix*/
+.group:after {
   content: "";
   display: table;
-}
-.group:after {
   clear: both;
-}
-.group {
-  zoom: 1; /* IE6&6 */
 }
 
 
@@ -238,4 +251,34 @@ footer {
 
 .navbar {
   z-index: 1;
+}
+
+.bttn {
+  display: inline-block;
+  *display: inline;
+  padding: $large-space 40px;
+  margin-bottom: 0;
+  *margin-left: .3em;
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  @include blue_gradient;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  *zoom: 1;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  a {
+    color: white;
+    font-family: "bariol";
+    &:hover{
+      text-decoration: none;
+      @include text_shadow;
+    }
+  }
 }
