--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -2,33 +2,30 @@
   .row-fluid
     .span4
       = image_tag "policy.png"
-      %h3 Discover politicians' policy positions.
+      %h3 A dynamaic archive of interactive policies ...
     .span4
       = image_tag "candidates.png"
-      %h3 Compare and contrast your position with politicians.
+      %h3 where voters and politicians share their opinions
     .span4
       = image_tag "vote.png" 
-      %h3 Make informed voting decisions.
-%section#audience.span10
-  %ul
-    %li#voters.span9
-      .row
-        .desc.span4
-          %h2 For Voters
-          %p Discover politicians and organizations who support causes you care about and monitor your shared sentiment with them over time.
-        = image_tag "nytm_andrew_sopa.jpg", {:class=>"img img-polaroid span4"}
-    %li#orgs.span9
-      .row
-        = image_tag "candidate_frac.jpg", {:class=>"img img-polaroid span4"}
-        .desc.span4
-          %h2 For Organizations
-          %p Solicit, monitor, and analyze politicians' and voters' policy sentiments and identify potential supporters, volunteers, or alliances.
-    %li#politicians.span9
-      .row
-        .desc.span4
-          %h2 For Politicans
-          %p Document your policy stance in a sharable way so that campaigners and supporters can evangelize your platform.
-        = image_tag "right_to_literacy.jpg", {:class=>"img img-polaroid span4"}
+      %h3 ... to improve political and legislative decision-making.
+%hr
+%section#audience
+  .row.span9
+    .desc.span4
+      %h2 For Voters
+      %p Discover politicians and organizations who support causes you care about and monitor your shared sentiment with them over time.
+    = image_tag "nytm_andrew_sopa.jpg", {:class=>"img img-polaroid span4"}
+  .row.span9
+    = image_tag "candidate_frac.jpg", {:class=>"img img-polaroid span4"}
+    .desc.span4
+      %h2 For Organizations
+      %p Solicit, monitor, and analyze politicians' and voters' policy sentiments and identify potential supporters, volunteers, or alliances.
+  .row.span9
+    .desc.span4
+      %h2 For Politicans
+      %p Document your policy stance in a sharable way so that campaigners and supporters can evangelize your platform.
+    = image_tag "right_to_literacy.jpg", {:class=>"img img-polaroid span4"}
 
 
 
