--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,7 +40,8 @@
             = image_tag "email-48.png", {:class=>"img email"}
           %p A project by OpenNY Forum, a proud member of the Code for America Brigade community. March 2013
         .span2
-          = image_tag "cfab_logo.jpg", {:class=>"img img-polaroid"}
+          %a{:href="http://brigade.codeforamerica.org"}
+            = image_tag "cfab_logo.jpg", {:class=>"img img-polaroid"}
   =javascript_include_tag "application"
   :javascript
     $(document).ready(function() {
