--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,7 +41,7 @@
           %p A project by OpenNY Forum, a proud member of the Code for America Brigade community. March 2013
         .span2
           %a{:href="http://brigade.codeforamerica.org"}
-            = image_tag "cfab_logo.jpg", {:class=>"img img-polaroid"}
+            = image_tag "CfA_Brigade_logo.png", {:class=>"img img-polaroid"}
   =javascript_include_tag "application"
   :javascript
     $(document).ready(function() {
