--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,6 +26,12 @@ $grayMediumLight: #eaeaea;
     font-style: normal;
 }
 
+@mixin grey_box_shadow {
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
 @mixin blue_gradient {
   background: #3498db; /* Old browsers */
   background: -moz-linear-gradient(top, #3498db 0%, #2980b9 100%); /* FF3.6+ */
@@ -165,6 +171,7 @@ body {
     background-color: white;
     padding: $medium-space;
     margin: $medium-space auto;
+    @include grey_box_shadow;
   }
   h2 {
     font-family: "bariol";
