--- a/app/views/layouts/_main_nav.html.haml
+++ b/app/views/layouts/_main_nav.html.haml
@@ -17,4 +17,4 @@
           = link_to "Sign Out", signout_path, method: "delete"
       -else
         %li 
-          =link_to "Sign in", "#"
+          =link_to "Sign in", signin_path
